Update weather Madrid

--- a/mounts/config/config.js.template
+++ b/mounts/config/config.js.template
@@ -48,20 +48,20 @@ let config = {
 			module: "clock",
 			position: "top_left"
 		},
-		//{
-		//	module: "calendar",
-		//	header: "US Holidays",
-		//	position: "top_left",
-		//	config: {
-		//		calendars: [
-		//			{
-		//				fetchInterval: 7 * 24 * 60 * 60 * 1000,
-		//				symbol: "calendar-check",
-		//				url: "https://ics.calendarlabs.com/76/mm3137/US_Holidays.ics"
-		//			}
-		//		]
-		//	}
-		//},
+		{
+			module: "calendar",
+			header: "US Holidays",
+			position: "top_left",
+			config: {
+				calendars: [
+					{
+						fetchInterval: 7 * 24 * 60 * 60 * 1000,
+						symbol: "calendar-check",
+						url: "https://ics.calendarlabs.com/76/mm3137/US_Holidays.ics"
+					}
+				]
+			}
+		},
 		{
 			module: "compliments",
 			position: "lower_third"
@@ -72,8 +72,8 @@ let config = {
 			config: {
 				weatherProvider: "openweathermap",
 				type: "current",
-				location: "New York", //"Madrid",
-				locationID: "5128581", //"${CityID}", //"5128581" "${CityID}", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
+				location: "Madrid",
+				locationID: "${CityID}", //"5128581" "${CityID}", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
 				apiKey: "${OPENWEATHER_APY_KEY}"
 			}
 		},
@@ -84,8 +84,8 @@ let config = {
 			config: {
 				weatherProvider: "openweathermap",
 				type: "forecast",
-				location: "New York",
-				locationID: "5128581",//"${CityID}", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
+				location: "Madrid",
+				locationID: "${CityID}", //ID from http://bulk.openweathermap.org/sample/city.list.json.gz; unzip the gz file and find your city
 				apiKey: "${OPENWEATHER_APY_KEY}"
 			}
 		},
